<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCountTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_a700"
    android:padding="25dp"
    android:visibility="gone" >

    <LinearLayout
        android:id="@+id/subLayoutCountTime1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_info_time"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txtCountTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_count_time"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_count_time" />

        <TextView
            android:id="@+id/txtCountTimePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_percent"
            android:textColor="@android:color/white" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/subLayoutCountTime2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/subLayoutCountTime3"
        android:layout_below="@+id/subLayoutCountTime1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listViewTimeLap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/subLayoutCountTime3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btnStartCountTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_start"
            android:text="@string/start"
            android:textColor="@color/blue_a700"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnStopCountTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_button_stop"
            android:text="@string/stop"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLapCountTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_button_start"
            android:text="@string/lap"
            android:textColor="@color/blue_a700"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnContinueCountTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/background_button_start"
            android:text="@string/continue_time"
            android:textColor="@color/blue_a700"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnResetCountTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_button_reset"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>