<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutScheduleTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_a700"
    android:padding="25dp"
    android:visibility="gone" >

    <ProgressBar
        android:id="@+id/progressBarScheduleTime"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/style_circle_fill"
        android:secondaryProgress="75" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@color/blue_a700"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edtHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:cursorVisible="false"
            android:inputType="time"
            android:maxLength="2"
            android:text="@string/two_zero"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_schedule_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_schedule_time" />

        <EditText
            android:id="@+id/edtMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:cursorVisible="false"
            android:inputType="time"
            android:maxLength="2"
            android:text="@string/two_zero"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_schedule_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_schedule_time" />

        <EditText
            android:id="@+id/edtSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:cursorVisible="false"
            android:inputType="time"
            android:maxLength="2"
            android:text="@string/two_zero"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_schedule_time" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStartScheduleTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background_button_start"
        android:text="@string/start"
        android:textColor="@color/blue_a700" />

    <Button
        android:id="@+id/btnResetScheduleTime"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/background_button_reset_false"
        android:enabled="false"
        android:text="@string/reset"
        android:textColor="@color/grey_500" />

    <Button
        android:id="@+id/btnOKScheduleTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_button_stop"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>